--- a/email1.html
+++ b/email1.html
@@ -24,7 +24,7 @@
                 <tr>
                     <td style="padding-left: 40px; padding-top: 32px; margin: 0; padding-bottom: 32px;">
                         <p style="font-size: 20px; font-family: sans-serif;">
-                            Olá <b>Rossana</b>. <br />
+                            Olá <b>Ludmyla</b>. <br />
                             Você recebeu um pix de <b>Antedeguemon</b>.
                         </p>
                     </td>
